Fix dark-gray color code

--- a/src/tachyons-colors.css
+++ b/src/tachyons-colors.css
@@ -57,7 +57,7 @@
   --gray-secondary: #e2e3e7;
   
   --dark-gray: #63768d;
-  --dark-gray-secondary: #8996a5;
+  --dark-gray-secondary: #B0B6BE;
   
   --blue: #4786ff;
   --blue-secondary: #386fda;
