--- a/src/tachyons-colors.css
+++ b/src/tachyons-colors.css
@@ -50,7 +50,7 @@
   
   --white-secondary: #f8f8f8;
   
-  --base: #24282A;
+  --base: #21252d;
   --base-secondary: #141618;
   --base-light: #323439;
   
