--- a/tachyons-colors-variables.scss
+++ b/tachyons-colors-variables.scss
@@ -29,18 +29,19 @@ $white-05: rgba(255, 255, 255, .05) !default;
 $white-025: rgba(255, 255, 255, .025) !default;
 $white-0125: rgba(255, 255, 255, .0125) !default;
 $white-secondary: #f8f8f8 !default;
-$base: #232c3b !default;
-$base-secondary: #171e27 !default;
-$gray: #f4f5f9 !default;
+$base: #21252d !default;
+$base-secondary: #141618 !default;
+$base-light: #323439 !default;
+$gray: #F4F7F9 !default;
 $gray-secondary: #e2e3e7 !default;
 $dark-gray: #63768d !default;
-$dark-gray-secondary: #8996a5 !default;
-$blue: #4786ff !default;
-$blue-secondary: #386fda !default;
+$dark-gray-secondary: #B0B6BE !default;
+$blue: #316aff !default;
+$blue-secondary: #2758b8 !default;
 $dark-blue: #344055 !default;
 $dark-blue-secondary: #273040 !default;
-$green: #59cd90 !default;
-$green-secondary: #409b6b !default;
+$green: #409b6b !default;
+$green-secondary: #36855b !default;
 $orange: #fd9126 !default;
 $orange-secondary: #c97420 !default;
 $red: #f0624d !default;
